--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
         <div class="logo">
         <ul>
             <li class="about">About</li>
-            <li class="signin">
-              <button>signin</button></li>
         </ul>
       </div>
     </nav>
@@ -64,6 +62,11 @@
           <button>Scroll</button>
         </div>
         </section> --    i will ad  the function when i am done with all other things -->
+        <div class="content">
+          <h2>Currency Converter</h2>
+          <h2>Currency Converter</h2>
+          <h3 id="info">For all your currency related issues. Get latest news on currency</h3>
+        </div>
 
         <section class="secondpage">
           <div class="container">
@@ -140,7 +143,7 @@
             <div class="input-group">
               <button class="button">Convert</button>
             </div>
-            <div class="disclaimer">chandan.</div>
+            <div class="disclaimer">We are using an API where the limit is 300</div>
             <div class="latest_rates_display"></div>
 
           </div>
