Made adjustments in styles

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
 
-                    <img class="d-block w-100" src="images/CURRENCY CONVERTER.png" alt="First slide">
+                    <img class="d-block w-100" src="images/_d2b95cc4-3f13-4c93-a4ef-96dcff1ac94b.jpg" alt="First slide">
                     <div class="carousel-caption text-pop-up-top">
                       <h1 class="animated-text">Currency converter</h1>
                     </div>
