--- a/index.html
+++ b/index.html
@@ -189,6 +189,25 @@
       <div class="news"></div>
     </section>
 
+    <footer id="site-footer">
+      <div class="footer-content">
+        <div class="creators">
+          <h4>Meet the Creators</h4>
+          <ul>
+            <li>Chandan</li>
+            <li>Anurag</li>
+            <li>Sahaj</li>
+            <li>Jot Singh</li>
+          </ul>
+        </div>
+        <div class="contact">
+          <h4>Contact Us</h4>
+          <p>Email: sanjayghanshyam5@.gmail.com</p>
+          <p>Phone: 7908183740</p>
+        </div>
+      </div>
+    </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
