--- a/index.html
+++ b/index.html
@@ -195,9 +195,8 @@
           <h4>Meet the Creators</h4>
           <ul>
             <li>Chandan</li>
-            <li>Anurag</li>
-            <li>Sahaj</li>
-            <li>Jot Singh</li>
+            <li>sahaj</li>
+            <li>anurag</li>
           </ul>
         </div>
         <div class="contact">
